--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@marckraw/use-slots",
-  "version": "0.0.2",
+  "private": false,
+  "version": "0.0.3",
   "main": "dist/useSlots.js",
   "module": "./dist/useSlots.mjs",
   "types": "./dist/useSlots.d.ts",
