--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "@marckraw/use-slots",
-  "private": false,
-  "version": "0.0.3",
+  "name": "slot-me-in",
+  "version": "0.0.4",
   "main": "dist/useSlots.js",
   "module": "./dist/useSlots.mjs",
   "types": "./dist/useSlots.d.ts",
