--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^18.8.2",
     "tsup": "^6.2.3",
     "typescript": "^4.8.3"
   }
