--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "dist/*"
   ],
   "exports": {
-    ".": {
+    "getSlots": {
       "require": "./dist/getSlots.js",
       "import": "./dist/getSlots.mjs",
       "types": "./dist/getSlots.d.ts"
+    },
+    "useSlots": {
+      "require": "./dist/useSlots.js",
+      "import": "./dist/useSlots.mjs",
+      "types": "./dist/useSlots.d.ts"
     }
   },
   "typesVersions": {
@@ -25,7 +30,7 @@
     }
   },
   "scripts": {
-    "build": "tsup getSlots.tsx --dts --minify --format cjs,esm"
+    "build": "tsup getSlots.tsx useSlots.tsx --dts --minify --format cjs,esm"
   },
   "peerDependencies": {
     "react": "^18.2.0"
